fixed spacing issue in article

--- a/main.css
+++ b/main.css
@@ -200,7 +200,7 @@ article img {
 }
 
 article p {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 article footer p {
@@ -216,6 +216,7 @@ article footer p {
     color: #666;
     text-transform: uppercase;
     border-top: 1px solid #ccc;
+    margin: auto;
 }
 
 #site-footer {
